--- a/app/src/main/res/layout/fragment_disukai.xml
+++ b/app/src/main/res/layout/fragment_disukai.xml
@@ -5,14 +5,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDisukai"
-        android:layout_marginTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
     <TextView
         android:id="@+id/errorTextView"
-        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone" />
+        android:textColor="@color/black"
+        android:textSize="16sp"/>
 </LinearLayout>
