--- a/app/src/main/res/layout/item_link_card.xml
+++ b/app/src/main/res/layout/item_link_card.xml
@@ -3,26 +3,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardElevation="4dp"
-    app:cardCornerRadius="8dp">
+    android:layout_margin="16dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="2dp"
+    android:background="@android:color/white">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:background="@color/white"
+        android:outlineAmbientShadowColor="@color/black"
+        android:padding="16dp">
+
+        <ImageView
+            android:id="@+id/profileImageView"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/baseline_account_box_24"
+            android:scaleType="centerCrop" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:orientation="vertical">
 
         <!-- Title Text -->
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
             android:textColor="@android:color/black"
             android:textSize="16sp"
             android:text="Title" />
 
-        <!-- Separator line -->
+<!--        &lt;!&ndash; Separator line &ndash;&gt;-->
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -31,13 +50,14 @@
         <!-- URL Text -->
         <TextView
             android:id="@+id/linkTextView"
+            android:textAlignment="center"
+            android:textStyle="italic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
             android:textColor="@android:color/black"
-            android:textSize="14sp"
             android:clickable="true"
             android:focusable="true"/>
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
