--- a/app/src/main/res/layout/fragment_disukai.xml
+++ b/app/src/main/res/layout/fragment_disukai.xml
@@ -1,12 +1,16 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDisukai"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/errorTextView"
@@ -15,3 +19,4 @@
         android:textColor="@color/black"
         android:textSize="16sp"/>
 </LinearLayout>
+</ScrollView>
