--- a/app/src/main/res/layout/item_link_card.xml
+++ b/app/src/main/res/layout/item_link_card.xml
@@ -18,7 +18,7 @@
         android:padding="16dp">
 
         <ImageView
-            android:id="@+id/profileImageView"
+            android:id="@+id/imageBanner"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/baseline_account_box_24"
